Cambio de tipo de DTO usado para unificar los datos de la medición con la predicción
Se crea un nuevo DTO con el objetivo de unificar los datos de la medición de los sensores con el resultado de la predicción del tipo de evento.
